...
      <SectionList
        sections={sections}
        ListHeaderComponent={
          <ImageBackground
            style={styles.imageBackground}
            source={require('../../../assets/images/Bosses.png')}>
            <TopTitle title="Bosses " />
          </ImageBackground>
        }
        renderItem={({item}) => (
          <>
            {item?.image && (
              <CreatureCard onNavigation={handleNavigation} item={item} />
...
