...
            initialRouteName="Home">
            <Tab.Screen name="Search" component={Search} />
            <Tab.Screen
              name="Home"
              component={Home}
              options={{
                title: 'Browse',
              }}
            />
            <Tab.Screen
              name="BookMarks"
              component={BookMarks}
              options={{title: 'Bookmarks'}}
...
