...
} from 'react-native';
import {Spinner} from '../Spinner';
import {useQuery} from '@apollo/client';
import type {NativeStackScreenProps} from '@react-navigation/native-stack';
import LinearGradient from 'react-native-linear-gradient';
import type {HomeStackParams} from '../../types/pages';
import {GET_CREATURE_DETAILS} from '../../GraphQL/Creatures';
import {
  CreatureDetailsQueryVariables,
  CreatureDetailsQuery,
} from '../../types/graphql';

import LocationImage from '../Image';
...
        }}>
        <LocationImage locationName={data?.getCreature.location || ''} />
      </TouchableOpacity>

      <View style={styles.titleContainer}>
        <View style={styles.titleLine} />
        <Text style={text.subHeading}>Drops </Text>
        <View style={styles.titleLine} />
      </View>
      <View style={styles.stats}>
        {drops.map((drop, index) => {
          const number = index + 1;
          return (
...
