...
            source={require('../../../assets/images/Creatures.jpeg')}>
            <LinearGradient
              colors={['transparent', '#050300']}
              style={styles.linearGradient}>
              <View style={styles.titleContainer}>
                <View style={styles.titleLine} />
                <Text style={styles.header}>Creatures </Text>
                <View style={styles.titleLine} />
              </View>
            </LinearGradient>
          </ImageBackground>
        }
        renderItem={({item}) => (
...
